--- a/index.html
+++ b/index.html
@@ -1,51 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./css/base.css" >
-  <link rel="stylesheet" href="./css/index.css" >
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/index.css">
 
   <title>Frontend Mentor | Room homepage</title>
 
 </head>
+
 <body>
-  Home
-  Shop
-  About
-  Contact
+  <main class="main">
+    <section class="main__menu">
+      <header class="main__menu__header">
+        <nav class="main__menu__header__nav">
+          <img src="./images/logo.svg" alt="Room" class="header__nav__image-logo">
 
-  Discover innovative ways to decorate
+          <ul class="header__nav__menu-list">
+            <li class="nav__menu-list__item">Home</li>
+            <li class="nav__menu-list__item">Shop</li>
+            <li class="nav__menu-list__item">About</li>
+            <li class="nav__menu-list__item">Contact</li>
+          </ul>
+        </nav>
 
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
+      </header>
 
-  Shop now
+      <img src="./images/desktop-image-hero-1.jpg" alt="Table for two people white" class="main__menu__background-image" />
+    </section>
 
-  We are available all across the globe
+    <section class="main__content">
+      <h2 class="main__content__title"> Discover innovative ways to decorate</h2>
+      <p class="main__content__description">We provide unmatched quality, comfort, and style for property owners across the country.
+        Our experts combine form and function in bringing your vision to life. Create a room in your
+        own style with our collection and make your property a reflection of you and what you love.
+      </p>
 
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
 
-  Shop now
+      <!-- 
+      # To Do | Inserir texto do slider dinamicamente pelo javascript
+     
+      We are available all across the globe
 
-  Manufactured with the best materials
+      With stores all over the world, it's easy for you to find furniture for your home or place of business.
+      Locally, we’re in most major cities throughout the country. Find the branch nearest you using our
+      store locator. Any questions? Don't hesitate to contact us today.
 
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
 
-  Shop now
+      Manufactured with the best materials
 
-  About our furniture
+      Our modern furniture store provide a high level of quality. Our company has invested in advanced technology
+      to ensure that every product is made as perfect and as consistent as possible. With three decades of
+      experience in this industry, we understand what customers want for their home and office. 
+    -->
 
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
+      <a href="#" class="main__content__shop-now">Shop now <img src="./images/icon-arrow.svg" alt="icon arrow"></a>
+
+      <div class="main__content__slider">
+        <a href="" class="content__slider__next"> <img src="./images/icon-angle-left.svg" alt="Previus image"  class="slider__next__image" /> </a>
+        <a href="" class="content__slider__previous"> <img src="./images/icon-angle-right.svg" alt="Next image" class="slider__next__image" /> </a>
+      </div>
+    </section>
+
+
+    <section class="main__about-us">
+      <img src="./images/image-about-dark.jpg" alt="two black chairs with a table in the middle" class="main__about-us__primary-image">
+
+      <div class="main__about-us__content">
+        <h3 class="about-us__content__title">About our furniture</h3>
+        <p class="about-us__content__description"> 
+          Our multifunctional collection blends design and function to suit your individual taste.
+          Make each room unique, or pick a cohesive theme that best express your interests and what
+          inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+          or anything in between. Product specialists are available to help you create your dream space.
+        </p>
+      </div>
+
+      <img src="./images/image-about-light.jpg" alt="White chair" class="main__about-us__second-image">
+    </section>
+  </main>
 </body>
+
 </html>
