chore: estilização da primeira parte do grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/animations.css">
 
   <title>Frontend Mentor | Room homepage</title>
 
@@ -17,7 +18,7 @@
   <main class="main">
     <section class="main__menu">
       <header class="main__menu__header">
-        <nav class="main__menu__header__nav">
+        <nav class="menu__header__nav">
           <img src="./images/logo.svg" alt="Room" class="header__nav__image-logo">
 
           <ul class="header__nav__menu-list">
@@ -30,12 +31,14 @@
 
       </header>
 
-      <img src="./images/desktop-image-hero-1.jpg" alt="Table for two people white" class="main__menu__background-image" />
+      <img src="./images/desktop-image-hero-1.jpg" alt="Table for two people white"
+        class="main__menu__background-image" />
     </section>
 
     <section class="main__content">
       <h2 class="main__content__title"> Discover innovative ways to decorate</h2>
-      <p class="main__content__description">We provide unmatched quality, comfort, and style for property owners across the country.
+      <p class="main__content__description">We provide unmatched quality, comfort, and style for property owners across
+        the country.
         Our experts combine form and function in bringing your vision to life. Create a room in your
         own style with our collection and make your property a reflection of you and what you love.
       </p>
@@ -61,18 +64,21 @@
       <a href="#" class="main__content__shop-now">Shop now <img src="./images/icon-arrow.svg" alt="icon arrow"></a>
 
       <div class="main__content__slider">
-        <a href="" class="content__slider__next"> <img src="./images/icon-angle-left.svg" alt="Previus image"  class="slider__next__image" /> </a>
-        <a href="" class="content__slider__previous"> <img src="./images/icon-angle-right.svg" alt="Next image" class="slider__next__image" /> </a>
+        <a href="" class="content__slider__next"> <img src="./images/icon-angle-left.svg" alt="Previus image"
+            class="slider__next__image" /> </a>
+        <a href="" class="content__slider__previous"> <img src="./images/icon-angle-right.svg" alt="Next image"
+            class="slider__next__image" /> </a>
       </div>
     </section>
 
 
     <section class="main__about-us">
-      <img src="./images/image-about-dark.jpg" alt="two black chairs with a table in the middle" class="main__about-us__primary-image">
+      <img src="./images/image-about-dark.jpg" alt="two black chairs with a table in the middle"
+        class="main__about-us__primary-image">
 
       <div class="main__about-us__content">
         <h3 class="about-us__content__title">About our furniture</h3>
-        <p class="about-us__content__description"> 
+        <p class="about-us__content__description">
           Our multifunctional collection blends design and function to suit your individual taste.
           Make each room unique, or pick a cohesive theme that best express your interests and what
           inspires you. Find the furniture pieces you need, from traditional to contemporary styles
