--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
     </section>
 
     <section class="main__content">
-      <h2 class="main__content__title"> Discover innovative ways to decorate</h2>
-      <p class="main__content__description">We provide unmatched quality, comfort, and style for property owners across
-        the country.
-        Our experts combine form and function in bringing your vision to life. Create a room in your
-        own style with our collection and make your property a reflection of you and what you love.
-      </p>
+      <div class="main__content__item">
+        <h2 class="content__item__title"> Discover innovative ways to decorate</h2>
+        <p class="content__item__description">We provide unmatched quality, comfort, and style for property owners
+          across
+          the country.
+          Our experts combine form and function in bringing your vision to life. Create a room in your
+          own style with our collection and make your property a reflection of you and what you love.
+        </p>
 
-
-      <!-- 
+        <!-- 
       # To Do | Inserir texto do slider dinamicamente pelo javascript
      
       We are available all across the globe
@@ -59,15 +60,13 @@
       Our modern furniture store provide a high level of quality. Our company has invested in advanced technology
       to ensure that every product is made as perfect and as consistent as possible. With three decades of
       experience in this industry, we understand what customers want for their home and office. 
-    -->
+      -->
 
-      <a href="#" class="main__content__shop-now">Shop now <img src="./images/icon-arrow.svg" alt="icon arrow"></a>
-
-      <div class="main__content__slider">
-        <a href="" class="content__slider__next"> <img src="./images/icon-angle-left.svg" alt="Previus image"
-            class="slider__next__image" /> </a>
-        <a href="" class="content__slider__previous"> <img src="./images/icon-angle-right.svg" alt="Next image"
-            class="slider__next__image" /> </a>
+        <a href="#" class="main__content__shop-now">Shop now <img src="./images/icon-arrow.svg" alt="icon arrow"  class="main__content__shop-now__icon"></a>
+        <div class="main__content__slider">
+          <a href="" class="content__slider__next slider__action"> <img src="./images/icon-angle-left.svg" alt="Previus image" class="slider__next__image" /> </a>
+          <a href="" class="content__slider__previous slider__action"> <img src="./images/icon-angle-right.svg" alt="Next image" class="slider__next__image" /> </a>
+        </div>
       </div>
     </section>
 
