--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="main__content">
       <div class="main__content__item">
         <h2 class="content__item__title"> Discover innovative ways to decorate</h2>
-        <p class="content__item__description">We provide unmatched quality, comfort, and style for property owners
+        <p class="description__home-page content__item__description">We provide unmatched quality, comfort, and style for property owners
           across
           the country.
           Our experts combine form and function in bringing your vision to life. Create a room in your
@@ -72,12 +72,11 @@
 
 
     <section class="main__about-us">
-      <img src="./images/image-about-dark.jpg" alt="two black chairs with a table in the middle"
-        class="main__about-us__primary-image">
+      <img src="./images/image-about-dark.jpg" alt="two black chairs with a table in the middle" class="main__about-us__primary-image about-us__image">
 
       <div class="main__about-us__content">
         <h3 class="about-us__content__title">About our furniture</h3>
-        <p class="about-us__content__description">
+        <p class="description__home-page about-us__content__description">
           Our multifunctional collection blends design and function to suit your individual taste.
           Make each room unique, or pick a cohesive theme that best express your interests and what
           inspires you. Find the furniture pieces you need, from traditional to contemporary styles
@@ -85,7 +84,7 @@
         </p>
       </div>
 
-      <img src="./images/image-about-light.jpg" alt="White chair" class="main__about-us__second-image">
+      <img src="./images/image-about-light.jpg" alt="White chair" class="main__about-us__second-image about-us__image">
     </section>
   </main>
 </body>
