chore: ajustes css

--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
       <img src="./images/image-about-dark.jpg" alt="two black chairs with a table in the middle" class="main__about-us__primary-image about-us__image">
 
       <div class="main__about-us__content">
-        <h3 class="about-us__content__title">About our furniture</h3>
-        <p class="description__home-page about-us__content__description">
-          Our multifunctional collection blends design and function to suit your individual taste.
-          Make each room unique, or pick a cohesive theme that best express your interests and what
-          inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-          or anything in between. Product specialists are available to help you create your dream space.
-        </p>
+        <div class="about-us__content__container">
+          <h3 class="content__container__title">About our furniture</h3>
+          <p class="description__home-page content__container__description">
+            Our multifunctional collection blends design and function to suit your individual taste.
+            Make each room unique, or pick a cohesive theme that best express your interests and what
+            inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+            or anything in between. Product specialists are available to help you create your dream space.
+          </p>
+        </div>
       </div>
 
       <img src="./images/image-about-light.jpg" alt="White chair" class="main__about-us__second-image about-us__image">
