--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="main__menu__header">
         <nav class="menu__header__nav">
           <img src="./images/logo.svg" alt="Room" class="header__nav__image-logo">
-
+          
           <ul class="header__nav__menu-list">
             <li class="nav__menu-list__item">Home</li>
             <li class="nav__menu-list__item">Shop</li>
@@ -28,11 +28,13 @@
             <li class="nav__menu-list__item">Contact</li>
           </ul>
         </nav>
-
+        
       </header>
 
-      <img src="./images/desktop-image-hero-1.jpg" alt="Table for two people white"
-        class="main__menu__background-image" />
+      <picture>
+        <source srcset="./images/mobile-image-hero-1.jpg" media="(max-width: 550px)">
+        <img src="./images/desktop-image-hero-1.jpg" alt="Table for two people white" class="main__menu__background-image" />
+      </picture>
     </section>
 
     <section class="main__content">
