chore: implementando funcionalidade de slide

--- a/index.html
+++ b/index.html
@@ -43,42 +43,20 @@
       </header>
 
       <picture>
-        <source srcset="./images/mobile-image-hero-1.jpg" media="(max-width: 550px)">
-        <img src="./images/desktop-image-hero-1.jpg" alt="Table for two people white" class="main__menu__background-image" />
+        <source srcset="" media="(max-width: 550px)" class="image-source">
+        <img src="" alt="Table for two people white" class="main__menu__background-image" />
       </picture>
     </section>
 
     <section class="main__content">
       <div class="main__content__item">
-        <h2 class="content__item__title"> Discover innovative ways to decorate</h2>
-        <p class="description__home-page content__item__description">We provide unmatched quality, comfort, and style for property owners
-          across
-          the country.
-          Our experts combine form and function in bringing your vision to life. Create a room in your
-          own style with our collection and make your property a reflection of you and what you love.
-        </p>
-
-        <!-- 
-      # To Do | Inserir texto do slider dinamicamente pelo javascript
-     
-      We are available all across the globe
-
-      With stores all over the world, it's easy for you to find furniture for your home or place of business.
-      Locally, we’re in most major cities throughout the country. Find the branch nearest you using our
-      store locator. Any questions? Don't hesitate to contact us today.
-
-
-      Manufactured with the best materials
-
-      Our modern furniture store provide a high level of quality. Our company has invested in advanced technology
-      to ensure that every product is made as perfect and as consistent as possible. With three decades of
-      experience in this industry, we understand what customers want for their home and office. 
-      -->
+        <h2 class="content__item__title"> </h2>
+        <p class="description__home-page content__item__description"> jorge</p>
 
         <a href="#" class="main__content__shop-now">Shop now <img src="./images/icon-arrow.svg" alt="icon arrow"  class="main__content__shop-now__icon"></a>
         <div class="main__content__slider">
-          <a href="" class="content__slider__next slider__action"> <img src="./images/icon-angle-left.svg" alt="Previus image" class="slider__next__image" /> </a>
-          <a href="" class="content__slider__previous slider__action"> <img src="./images/icon-angle-right.svg" alt="Next image" class="slider__next__image" /> </a>
+          <a href="#" class="content__slider__previous slider__action"> <img src="./images/icon-angle-left.svg" alt="Previus image" class="slider__next__image" /> </a>
+          <a href="#" class="content__slider__next  slider__action"> <img src="./images/icon-angle-right.svg" alt="Next image" class="slider__next__image" /> </a>
         </div>
       </div>
     </section>
