chore: ajustes css

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 
     <section class="main__content">
       <div class="main__content__item">
-        <h2 class="content__item__title"> </h2>
-        <p class="description__home-page content__item__description"> jorge</p>
+        <div class="content__item__content">
+          <h2 class="item__content__title"> </h2>
+          <p class="description__home-page item__content__description"> </p>
+        </div>
 
         <a href="#" class="main__content__shop-now">Shop now <img src="./images/icon-arrow.svg" alt="icon arrow"  class="main__content__shop-now__icon"></a>
         <div class="main__content__slider">
